tests/e2e/validation-webhook/authorizations/match-conditions/valid/policy.yaml
# yaml-language-server: $schema=../../../../../.schemas/json/authorizationpolicy-envoy-v1alpha1.json
apiVersion: envoy.kyverno.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: valid
spec:
  authorizations:
  - match: >
      false
    response: >
      envoy
        .Denied(403)
        .WithBody("Unauthorized Request")
        .Response()
  - response: >
      envoy
        .Allowed()
        .Response()
